---
source: src/reg_compiler/tests.rs
expression: bytecode
---
Ok(
    0 ; script
    1 [   1]  Push           L12:  
    2 [   1]  LoadImediate   r2[fn([nil], 0)] (local *3)  
    3 ; imediate killed 3 for global *0
    4 [   1]  MemCpy         (global *0)  r2[fn([nil], 0)] (1u)  
    5 [   1]  Pop            
    6 ; imediate killed 4 for global *0
    7 [   0]  Move           r5[&fn([nil], 0)] (global *0)  
    8 [   0]  Move           r6[fn([nil], 0)] r5[&fn([nil], 0)] 
    9 [   0]  PreCall        r7[nil] r6[fn([nil], 0)] (0u)  
    10 [   0]  Call           
    11 [   0]  Halt           
    12 ; main
    13 ; imediate killed 1 for 5
    14 [   2]  PrintInt       (5)  
    15 [   1]  Return         r0[nil] (0u)  
    ,
)
